--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
     "allowJs": true,
     "noUnusedLocals": false,
     "strictNullChecks": false,
+    "checkJs": false,
     "lib": [
       "dom",
       "dom.iterable",
